package ch2_Adapter.ex1;

public interface Print {
    void printWeak();

    void printStrong();
}
