@startuml

title Adapter Pattern

class Main {
}

interface Print {
    + {abstract} printWeak()
    + {abstract} printStrong()
}

class Banner {
    + void showWithParen()
    + void showWithAster()
}

class PrintBanner {
    + void printWeak()
    + void printStrong()
}


Main -- Print : Uses >
Print <|.. PrintBanner
Banner <-- PrintBanner

@enduml
